--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <!-- Links para redes sociais -->
             <div class="social-icons">
                 <a href="https://wa.me/258877867084?text=Start-up" target="_blank" title="WhatsApp">
-                    <img src="./files/wha.png" alt="WhatsApp" width="26" height="26">
+                    <img src="wha.png" alt="WhatsApp" width="26" height="26">
                 </a>
                 <a href="https://discord.gg/fWb2kVMq" target="_blank" title="Discord">
-                    <img src="./files/dsc.png" alt="Discord" width="24" height="24">
+                    <img src="dsc.png" alt="Discord" width="24" height="24">
                 </a>
                 <a href="https://www.instagram.com/pitrossricard_/profilecard/?igsh=MXhxeDFnN2h6azIwdg==" target="_blank" title="Instagram">
-                    <img src="./files/insta.png" alt="Instagram" width="24" height="24">
+                    <img src="insta.png" alt="Instagram" width="24" height="24">
                 </a>
             </div>
             <!-- Informações de contato -->
